...
  <string name="setting_provider_page_model_display_name_placeholder">e.g.: GPT-3.5, for UI display</string>
  <string name="setting_provider_page_model_id">Model ID</string>
  <string name="setting_provider_page_model_id_placeholder">e.g.: gpt-3.5-turbo</string>
  <string name="setting_provider_page_model_name">Model Name</string>
  <string name="setting_provider_page_model_type">Model Type</string>
  <string name="setting_provider_page_models">Models</string>
  <string name="setting_provider_page_name">Name</string>
  <string name="setting_provider_page_no_models">No models</string>
  <string name="setting_provider_page_no_permission">No permission</string>
  <string name="setting_provider_page_no_qr_found">No valid QR code found</string>
  <string name="setting_provider_page_output_modality">Output Modality</string>
  <string name="setting_provider_page_private_key">Private Key</string>
  <string name="setting_provider_page_project_id">Project Id</string>
...
